# agno-agi-marketing

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  activate.sh  fix_summary.md  github_issues.md  github_issues_summary.md  github_setup.sh  main.py  pyproject.toml  requirements-core.txt  requirements-minimal.txt  requirements.txt  setup_guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: demo.yml
config/: logging.py  settings.py
src/: __init__.py  demo.py  simple_demo.py
src/agents/: __init__.py  marketing_expert.py
src/knowledge/: __init__.py  knowledge_manager.py  utils.py
src/memory/: __init__.py  agno_memory.py  memory_manager.py
src/orchestrator/: __init__.py
src/toolkits/: __init__.py  apollo_toolkit.py  builtwith_toolkit.py  hubspot_toolkit.py
src/workflows/: __init__.py
